finish styling and clean up layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,3 +43,19 @@ body {
     flex-shrink: none;
     background-color: lightblue !important;
 }
+
+.shadow {
+    background-color: lightblue !important;
+}
+
+.form-control {
+    background-color: #F7FAFA !important;
+}
+
+.card-body {
+    background-color: white !important;
+}
+
+.return {
+    color: white !important;
+}
