--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
      
       
       <div class="form-group row justify-content-center">
-        <%= f.submit class: "btn btn-outline-light btn-lg" %>
+        <%= f.submit "Sign up here", class: "btn btn-outline-light btn-lg" %>
       </div>
     <% end %>
   </div>
