--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Alpha bloggers</h1>
+<h1 class="text-center mt-4 mb-4">Alpha bloggers</h1>
 
 <div class="flickr_pagination">
   <%= will_paginate @users, :container => false %>
