--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Sign up for Alpha Blog</h1>
+<h1 class="text-center mt-4 mb-4">Sign up for Alpha Blog</h1>
 <%= render 'form' %>
 
-
+<div class=" mb-4"></div>
