--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,12 +1,12 @@
-<h1 class="text-center mt-4 mb-4">Create a new category</h1>
+<h1 class="text-center mt-4 mb-4">Edit category name</h1>
 
 <div class="container text-center">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'form' %>
+      <%= render 'form' %>'
     </div>
     <div class="mb-5 mt-5">
-      <%= link_to '[ Cancel and return to categories ]', categories_path, class: "return" %>
+      <%= link_to '[ Cancel and return to category ]', category_path(@category), class: "return" %>
     </div>
   </div>
 </div>
